--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "name": "vet2",
+  "name": "mitin",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "espress": "^0.0.0",
-    "express": "^5.1.0"
-  },
+  "type": "module",
   "scripts": {
-    "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "watch": "tsc -w"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
