--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start" : "node dist/server.js"
+    "start" : "node dist/index.js",
+    "dev": "ts-node src/index.ts"
 
   },
   "devDependencies": {
