--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "mitin",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start" : "node dist/index.js",
-    "dev": "ts-node src/index.ts"
-
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
