--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "rootDir": "src",
+    "rootDir": "Backend",
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "Backend/appointment", "Backend/auth", "Backend/adminCupones.ts", "Backend/cupon.ts", "Backend/ecomerce", "Backend/register.ts", "Backend/server.ts"],
   "exclude": ["node_modules", "dist"]
 }
