arreglos al server
lo commiteo a main porque no es nada importante

CUANDO CAMBIEN LA DIRECCION DE LOS ARCHIVOS, CAMBIEN LOS JSON TAMBIEN NO LES PARECE, LA PUTA MADRE

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "rootDir": "Backend",
     "outDir": "dist"
   },
-  "include": ["src", "Backend/appointment", "Backend/auth", "Backend/adminCupones.ts", "Backend/cupon.ts", "Backend/ecomerce", "Backend/register.ts", "Backend/server.ts"],
+  "include": ["Backend/**/*", "src"],
   "exclude": ["node_modules", "dist"]
 }
