--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+  "dev": "ts-node-dev --respawn --transpile-only Backend/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
