--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node dist/index.js",
-  "dev": "ts-node-dev --respawn --transpile-only Backend/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only Backend/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
+    "@types/node": "^24.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "nodemailer": "^7.0.10",
+    "sqlite3": "^5.1.7"
   }
 }
