--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "nodemailer": "^7.0.10",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
