--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.10.0",
+    "@types/nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
@@ -24,6 +25,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "nodemailer": "^7.0.10",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
