puta bd de mierda

--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "frontend"
   ],
   "dependencies": {
-    "@prisma/client": "^6.19.0"
+    "@prisma/client": "^6.19.0",
+    "connect-pg-simple": "^10.0.0",
+    "dotenv": "^17.2.3",
+    "express-session": "^1.18.2"
+  },
+  "devDependencies": {
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/express-session": "^1.18.2"
   }
 }
