--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only Backend/index.ts",
+    "start": "node dist/Backend/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only Backend/server.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init"
   },
@@ -30,6 +30,7 @@
     "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "nodemailer": "^7.0.10",
