--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "es2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
