--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@prisma/client": "^6.19.0",
     "connect-pg-simple": "^10.0.0",
     "express-session": "^1.18.2"
+  },
+  "devDependencies": {
+    "@types/connect-pg-simple": "^7.0.3"
   }
 }
