--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "../dist/frontend",
     "rootDir": ".",
     "lib": ["ES2020", "DOM"],
-    "types": [],
-    "composite": true
+  "types": []
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
