--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@prisma/client": "^6.19.0",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^17.2.3",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "prisma": "^6.19.0"
   },
   "devDependencies": {
     "@types/connect-pg-simple": "^7.0.3",
